--- a/Atividade modulo 3/style.css
+++ b/Atividade modulo 3/style.css
@@ -1,7 +1,27 @@
-body{
-    background-color: black;
-    color: white;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
-.botao{
-    background-color: blue;
+
+header li {
+    display: inline;
+}
+
+.container {
+    width: 1366px;
+    margin: 0 auto;
+}
+
+.articles {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.articles article img {
+    height: 180px;
+}
+
+.articles article {
+    width: 30%;
 }
